PJ_03/myCheckerParser.java
// $ANTLR 3.5.2 myChecker.g 2018-05-30 16:54:17

    // import packages here.
    import java.util.HashMap;
    import java.lang.Math;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCheckerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD_ASS_OP", "ADD_OP", "AND_ASS_OP", 
		"AND_OP", "ARROW_OP", "ASSIGN_OP", "BIT_AND_OP", "BIT_OR_OP", "BIT_XOR_OP", 
		"CHAR", "COMMENT", "CONST", "Character_constant", "DIV_ASS_OP", "DIV_OP", 
		"DOT_OP", "ELSE_", "EQ_OP", "FLOAT", "FOR", "Floating_point_constant", 
		"GE_OP", "GREATER_OP", "IF", "INT", "Identifier", "Integer_constant", 
		"LESS_OP", "LE_OP", "LSHIFT_OP", "MAIN", "MM_OP", "MOD_ASS_OP", "MOD_OP", 
		"MUL_ASS_OP", "MUL_OP", "NE_OP", "OR_ASS_OP", "OR_OP", "PP_OP", "RETURN", 
		"RSHIFT_OP", "SUB_ASS_OP", "SUB_OP", "TRINARY_OP1", "TRINARY_OP2", "VOID", 
		"WHILE", "WS", "XOR_ASS_OP", "'('", "')'", "';'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int ADD_ASS_OP=4;
	public static final int ADD_OP=5;
	public static final int AND_ASS_OP=6;
	public static final int AND_OP=7;
	public static final int ARROW_OP=8;
	public static final int ASSIGN_OP=9;
	public static final int BIT_AND_OP=10;
	public static final int BIT_OR_OP=11;
	public static final int BIT_XOR_OP=12;
	public static final int CHAR=13;
	public static final int COMMENT=14;
	public static final int CONST=15;
	public static final int Character_constant=16;
	public static final int DIV_ASS_OP=17;
	public static final int DIV_OP=18;
	public static final int DOT_OP=19;
	public static final int ELSE_=20;
	public static final int EQ_OP=21;
	public static final int FLOAT=22;
	public static final int FOR=23;
	public static final int Floating_point_constant=24;
	public static final int GE_OP=25;
	public static final int GREATER_OP=26;
	public static final int IF=27;
	public static final int INT=28;
	public static final int Identifier=29;
	public static final int Integer_constant=30;
	public static final int LESS_OP=31;
	public static final int LE_OP=32;
	public static final int LSHIFT_OP=33;
	public static final int MAIN=34;
	public static final int MM_OP=35;
	public static final int MOD_ASS_OP=36;
	public static final int MOD_OP=37;
	public static final int MUL_ASS_OP=38;
	public static final int MUL_OP=39;
	public static final int NE_OP=40;
	public static final int OR_ASS_OP=41;
	public static final int OR_OP=42;
	public static final int PP_OP=43;
	public static final int RETURN=44;
	public static final int RSHIFT_OP=45;
	public static final int SUB_ASS_OP=46;
	public static final int SUB_OP=47;
	public static final int TRINARY_OP1=48;
	public static final int TRINARY_OP2=49;
	public static final int VOID=50;
	public static final int WHILE=51;
	public static final int WS=52;
	public static final int XOR_ASS_OP=53;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCheckerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCheckerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCheckerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myChecker.g"; }


	    // boolean TRACEON = true;
	    boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String, Integer>();
	    final String[] type_dict = {"err", "int", "float", "char"};
	    public boolean match_operands(int a, int b, int a_line, String op) {
	        if (a==0 || b==0 || Math.abs(a) != Math.abs(b)) { 
				  System.out.println("Type Error: line: " + 
					                 a_line +
							         ": Type mismatch for the operator " + op + " in an expression. (" +
	                                 type_dict[Math.abs(a)] + " vs " +
	                                 type_dict[Math.abs(b)] + ")"
	                                 );
	              return false;
	        }
	        return true;
	    }

		/* abs(attr_type):
	       0 => error,
	       1 => integer,
	       2 => float
	       3 => char,

	       sign(attr_type):
	       <0: const
	       >0: variable
	    */	   



	// $ANTLR start "program"
	// myChecker.g:39:1: program : ( VOID | INT | FLOAT ) MAIN '(' ( . )* ')' '{' declarations statements '}' ;
	public final void program() throws RecognitionException {
		try {
			// myChecker.g:40:2: ( ( VOID | INT | FLOAT ) MAIN '(' ( . )* ')' '{' declarations statements '}' )
			// myChecker.g:40:4: ( VOID | INT | FLOAT ) MAIN '(' ( . )* ')' '{' declarations statements '}'
			{
			if ( input.LA(1)==FLOAT||input.LA(1)==INT||input.LA(1)==VOID ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,MAIN,FOLLOW_MAIN_in_program31); 
			match(input,54,FOLLOW_54_in_program33); 
			// myChecker.g:40:30: ( . )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==55) ) {
					alt1=2;
				}
				else if ( ((LA1_0 >= ADD_ASS_OP && LA1_0 <= 54)||(LA1_0 >= 56 && LA1_0 <= 58)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myChecker.g:40:30: .
					{
					matchAny(input); 
					}
					break;

				default :
					break loop1;
				}
			}

			match(input,55,FOLLOW_55_in_program38); 
			match(input,57,FOLLOW_57_in_program40); 
			pushFollow(FOLLOW_declarations_in_program42);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_program44);
			statements();
			state._fsp--;

			match(input,58,FOLLOW_58_in_program46); 
			 if (TRACEON) System.out.println("VOID MAIN () {declarations statements}"); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declarations"
	// myChecker.g:44:1: declarations : ( const_type type Identifier ( ASSIGN_OP arith_expression )? ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier1=null;
		int type2 =0;
		int const_type3 =0;
		ParserRuleReturnScope arith_expression4 =null;

		try {
			// myChecker.g:45:2: ( const_type type Identifier ( ASSIGN_OP arith_expression )? ';' declarations |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CHAR||LA3_0==CONST||LA3_0==FLOAT||LA3_0==INT) ) {
				alt3=1;
			}
			else if ( (LA3_0==Character_constant||(LA3_0 >= FOR && LA3_0 <= Floating_point_constant)||LA3_0==IF||(LA3_0 >= Identifier && LA3_0 <= Integer_constant)||LA3_0==MM_OP||(LA3_0 >= PP_OP && LA3_0 <= RETURN)||LA3_0==SUB_OP||LA3_0==WHILE||LA3_0==54||LA3_0==58) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myChecker.g:45:4: const_type type Identifier ( ASSIGN_OP arith_expression )? ';' declarations
					{
					pushFollow(FOLLOW_const_type_in_declarations64);
					const_type3=const_type();
					state._fsp--;

					pushFollow(FOLLOW_type_in_declarations66);
					type2=type();
					state._fsp--;

					Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations68); 

						   if (TRACEON) System.out.println("declarations: type Identifier : declarations");
						 
					  	   if (symtab.containsKey((Identifier1!=null?Identifier1.getText():null))) {
							   System.out.println("Type Error: line: " + 
									              Identifier1.getLine() + 
												  ": Redeclared identifier: " +
					                              (Identifier1!=null?Identifier1.getText():null)
					                              );
						   } else {
							   /* Add ID and its attr_type into the symbol table. */
							   symtab.put((Identifier1!=null?Identifier1.getText():null), type2 * const_type3);	   
						   }
						 
					// myChecker.g:59:5: ( ASSIGN_OP arith_expression )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==ASSIGN_OP) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// myChecker.g:59:7: ASSIGN_OP arith_expression
							{
							match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_declarations80); 
							pushFollow(FOLLOW_arith_expression_in_declarations82);
							arith_expression4=arith_expression();
							state._fsp--;


							           int temp = symtab.get((Identifier1!=null?Identifier1.getText():null));
							           if (temp==0 || (arith_expression4!=null?((myCheckerParser.arith_expression_return)arith_expression4).attr_type:0)==0 || Math.abs(temp) != Math.abs((arith_expression4!=null?((myCheckerParser.arith_expression_return)arith_expression4).attr_type:0))) {
							           System.out.println("Type Error: line: " + 
											              (arith_expression4!=null?(arith_expression4.start):null).getLine() +
													      ": Initialization failed. Type mismatch for the two silde operands in an assignment statement. (" +
							                              type_dict[Math.abs(temp)] + " vs " +
							                              type_dict[Math.abs((arith_expression4!=null?((myCheckerParser.arith_expression_return)arith_expression4).attr_type:0))] + ")"
							                              );
							       }
							         
							}
							break;

					}

					match(input,56,FOLLOW_56_in_declarations89); 
					pushFollow(FOLLOW_declarations_in_declarations91);
					declarations();
					state._fsp--;

					}
					break;
				case 2 :
					// myChecker.g:70:4: 
					{
					 if (TRACEON) System.out.println("declarations: "); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "const_type"
	// myChecker.g:73:1: const_type returns [int attr_constant] : ( CONST |);
	public final int const_type() throws RecognitionException {
		int attr_constant = 0;


		try {
			// myChecker.g:74:5: ( CONST |)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==CONST) ) {
				alt4=1;
			}
			else if ( (LA4_0==CHAR||LA4_0==FLOAT||LA4_0==INT) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// myChecker.g:74:7: CONST
					{
					match(input,CONST,FOLLOW_CONST_in_const_type114); 
					 if (TRACEON) System.out.println("type: constant: "); attr_constant = -1; 
					}
					break;
				case 2 :
					// myChecker.g:75:7: 
					{
					 if (TRACEON) System.out.println("type: variable: "); attr_constant = 1; 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_constant;
	}
	// $ANTLR end "const_type"



	// $ANTLR start "type"
	// myChecker.g:77:1: type returns [int attr_type] : ( INT | FLOAT | CHAR );
	public final int type() throws RecognitionException {
		int attr_type = 0;


		try {
			// myChecker.g:78:2: ( INT | FLOAT | CHAR )
			int alt5=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt5=1;
				}
				break;
			case FLOAT:
				{
				alt5=2;
				}
				break;
			case CHAR:
				{
				alt5=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// myChecker.g:78:4: INT
					{
					match(input,INT,FOLLOW_INT_in_type137); 
					 if (TRACEON) System.out.println("type: INT");  attr_type = 1; 
					}
					break;
				case 2 :
					// myChecker.g:79:4: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type147); 
					 if (TRACEON) System.out.println("type: FLOAT");  attr_type = 2; 
					}
					break;
				case 3 :
					// myChecker.g:80:4: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type154); 
					 if (TRACEON) System.out.println("type: CHAR");  attr_type = 3; 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myChecker.g:83:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myChecker.g:84:2: ( statement statements |)
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==Character_constant||(LA6_0 >= FOR && LA6_0 <= Floating_point_constant)||LA6_0==IF||(LA6_0 >= Identifier && LA6_0 <= Integer_constant)||LA6_0==MM_OP||(LA6_0 >= PP_OP && LA6_0 <= RETURN)||LA6_0==SUB_OP||LA6_0==WHILE||LA6_0==54) ) {
				alt6=1;
			}
			else if ( (LA6_0==58) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// myChecker.g:84:3: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements165);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements167);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myChecker.g:85:3: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"


	public static class arith_expression_return extends ParserRuleReturnScope {
		public int attr_type;
	};


	// $ANTLR start "arith_expression"
	// myChecker.g:87:1: arith_expression returns [int attr_type] : a= multExpr ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )* ;
	public final myCheckerParser.arith_expression_return arith_expression() throws RecognitionException {
		myCheckerParser.arith_expression_return retval = new myCheckerParser.arith_expression_return();
		retval.start = input.LT(1);

		Token ADD_OP5=null;
		Token SUB_OP6=null;
		Token EQ_OP7=null;
		Token LE_OP8=null;
		Token GE_OP9=null;
		Token NE_OP10=null;
		Token GREATER_OP11=null;
		Token LESS_OP12=null;
		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;

		try {
			// myChecker.g:88:2: (a= multExpr ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )* )
			// myChecker.g:88:4: a= multExpr ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )*
			{
			pushFollow(FOLLOW_multExpr_in_arith_expression187);
			a=multExpr();
			state._fsp--;

			 retval.attr_type = Math.abs((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0)); 
			// myChecker.g:89:7: ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )*
			loop7:
			while (true) {
				int alt7=9;
				switch ( input.LA(1) ) {
				case ADD_OP:
					{
					alt7=1;
					}
					break;
				case SUB_OP:
					{
					alt7=2;
					}
					break;
				case EQ_OP:
					{
					alt7=3;
					}
					break;
				case LE_OP:
					{
					alt7=4;
					}
					break;
				case GE_OP:
					{
					alt7=5;
					}
					break;
				case NE_OP:
					{
					alt7=6;
					}
					break;
				case GREATER_OP:
					{
					alt7=7;
					}
					break;
				case LESS_OP:
					{
					alt7=8;
					}
					break;
				}
				switch (alt7) {
				case 1 :
					// myChecker.g:89:9: ADD_OP b= multExpr
					{
					ADD_OP5=(Token)match(input,ADD_OP,FOLLOW_ADD_OP_in_arith_expression199); 
					pushFollow(FOLLOW_multExpr_in_arith_expression205);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (ADD_OP5!=null?ADD_OP5.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 2 :
					// myChecker.g:93:6: SUB_OP b= multExpr
					{
					SUB_OP6=(Token)match(input,SUB_OP,FOLLOW_SUB_OP_in_arith_expression219); 
					pushFollow(FOLLOW_multExpr_in_arith_expression225);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (SUB_OP6!=null?SUB_OP6.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 3 :
					// myChecker.g:97:9: EQ_OP b= multExpr
					{
					EQ_OP7=(Token)match(input,EQ_OP,FOLLOW_EQ_OP_in_arith_expression242); 
					pushFollow(FOLLOW_multExpr_in_arith_expression248);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (EQ_OP7!=null?EQ_OP7.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 4 :
					// myChecker.g:101:9: LE_OP b= multExpr
					{
					LE_OP8=(Token)match(input,LE_OP,FOLLOW_LE_OP_in_arith_expression265); 
					pushFollow(FOLLOW_multExpr_in_arith_expression271);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (LE_OP8!=null?LE_OP8.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 5 :
					// myChecker.g:105:9: GE_OP b= multExpr
					{
					GE_OP9=(Token)match(input,GE_OP,FOLLOW_GE_OP_in_arith_expression288); 
					pushFollow(FOLLOW_multExpr_in_arith_expression294);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (GE_OP9!=null?GE_OP9.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 6 :
					// myChecker.g:109:9: NE_OP b= multExpr
					{
					NE_OP10=(Token)match(input,NE_OP,FOLLOW_NE_OP_in_arith_expression311); 
					pushFollow(FOLLOW_multExpr_in_arith_expression317);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (NE_OP10!=null?NE_OP10.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 7 :
					// myChecker.g:113:9: GREATER_OP b= multExpr
					{
					GREATER_OP11=(Token)match(input,GREATER_OP,FOLLOW_GREATER_OP_in_arith_expression334); 
					pushFollow(FOLLOW_multExpr_in_arith_expression340);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (GREATER_OP11!=null?GREATER_OP11.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 8 :
					// myChecker.g:117:9: LESS_OP b= multExpr
					{
					LESS_OP12=(Token)match(input,LESS_OP,FOLLOW_LESS_OP_in_arith_expression357); 
					pushFollow(FOLLOW_multExpr_in_arith_expression363);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (LESS_OP12!=null?LESS_OP12.getText():null))) retval.attr_type = 0;
					        
					}
					break;

				default :
					break loop7;
				}
			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arith_expression"


	public static class multExpr_return extends ParserRuleReturnScope {
		public int attr_type;
	};


	// $ANTLR start "multExpr"
	// myChecker.g:124:1: multExpr returns [int attr_type] : a= signExpr ( '*' signExpr | '/' signExpr )* ;
	public final myCheckerParser.multExpr_return multExpr() throws RecognitionException {
		myCheckerParser.multExpr_return retval = new myCheckerParser.multExpr_return();
		retval.start = input.LT(1);

		int a =0;

		try {
			// myChecker.g:125:2: (a= signExpr ( '*' signExpr | '/' signExpr )* )
			// myChecker.g:125:4: a= signExpr ( '*' signExpr | '/' signExpr )*
			{
			pushFollow(FOLLOW_signExpr_in_multExpr395);
			a=signExpr();
			state._fsp--;

			 retval.attr_type = Math.abs(a); 
			// myChecker.g:126:7: ( '*' signExpr | '/' signExpr )*
			loop8:
			while (true) {
				int alt8=3;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==MUL_OP) ) {
					alt8=1;
				}
				else if ( (LA8_0==DIV_OP) ) {
					alt8=2;
				}
